# house_pricing_mlops

./: README.md  pyproject.toml  requirements.txt  run_notebook.sh
.github/workflows/: mlops-ci-cd.yml
notebooks/: house_pricing_analyse.ipynb  house_pricing_model_building.ipynb  house_pricing_model_building_deployed.ipynb
notebooks/.ipynb_checkpoints/: house_pricing_analyse-checkpoint.ipynb  house_pricing_model_building-checkpoint.ipynb  house_pricing_model_building_deployed-checkpoint.ipynb  tuto-mlflow-sklearn-checkpoint.ipynb
settings/: params.py
src/: make_dataset.py  optimizer.py  run_notebook.sh  trainer.py  utils.py
tests/: test_make_dataset.py  test_trainer.py  test_utils.py
